2007-04-15  Tor Lillqvist  <tml@novell.com>

	* build: Include the build module using the svn:externals
	mechanism.

	* Makefile.am
	* configure: Add the references to build back.

2007-03-23  Matthias Clasen  <mclasen@redhat.com> 

	Merge from trunk:

	* tests/gobject/Makefile.am: Handle $RANDOM missing.  (#356843,
	Paul Jarc)

2007-03-22  Matthias Clasen  <mclasen@redhat.com> 

	Merge from trunk:

	* glib/guniprop.c: Fix corner-cases of upper/lowercase conversion.
	(#418217, Denis Jacquerye)

2007-03-22  Chris Wilson  <chris@chris-wilson.co.uk>

	Merge from trunk:

	* glib/gkeyfile.c: Track whether the last key=value pair in a group
	is a blank line and during to_data() only insert a new blank line
	betweens group in its absence. This allows the beautification of the
	GKeyFile and prevents newlines being inserted indefinitely. (#420686)

	* tests/keyfile-test.c (test_reload_idempotency): Test that after a 
	single beautification pass, g_key_file_to_data() does not alter its
	input data.

2007-03-16  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* glib/gbase64.c (g_base64_decode): Warn if the input
	is too short.  (#418862, Halton Huo)

2007-03-08  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.11 ===

	* NEWS: Updates

2007-03-08  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* glib/gstrfuncs.c (g_strtoll): Return negative values.
	(#416062)

	* tests/strtoll-test.c: Add more testcases.

2007-03-08  Matthias Clasen  <mclasen@redhat.com>

	* glib/gthreadpool.c: Remove leftover debug spew.

2007-03-07  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version
	
	* === Released 2.12.10 ===

	* tests/threadpool-test.c: Stop unused threads before
	the last test, to make the test terminate reliably.

	* NEWS: Updates

2007-03-06  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* glib/gmarkup.c (g_markup_parse_context_parse): Report
	more accurate position for invalid UTF-8.  (#350802,
	Simon Budig)
