@@ -1,3 +1,14 @@
+2007-04-24  Michael Natterer  <mitch@imendio.com>
+
+	Merge from trunk:
+
+	* gobject/gparamspecs.c (param_string_validate): don't free or
+	modify static strings, dup them when needed and clear the
+	G_VALUE_NOCOPY_CONTENTS flag. Fixes bug #432895.
+
+	* tests/gobject/paramspec-test.c: test all GParamSpecString
+	validations with static and allocated strings.
+
 2007-04-15  Tor Lillqvist  <tml@novell.com>
 
 	* build: Include the build module using the svn:externals
